# rinkabot

./: .gitignore  .replit  .update.sh.swp  index.js  main.py  memory-622339146584817664.json  memory.txt  pyproject.toml  replit.nix  requirements.txt  rinka.py  server.py  settings.txt  update.sh
