[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
DateTime = "5.1"
keep-alive = "0.0.1"
aiohttp = "3.8.4"
"discord.js" = "1.0.7"
openai = "^0.27.8"
"discord.py" = "2.3.2"
langchain-community = "0.3.1"
langchain = "0.3.4"
langchain-core = "0.3.12"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"